tests/lexer/invalid/01_invalid_char.src
// Недопустимые символы
@invalid
#invalid
$invalid
`invalid